# BIGCAM

./: CMakeLists.txt  README.md
Modeling/: Robot.dia
Modeling/Electronics/: schematics.dia
Modeling/System_engineering/: context.tiff  usecases.tiff
Remote_python/: Configuration.py  GUI.py  Infos_commandes.py  Interface_client.py  main.py
src/: Altimeter.cpp  Altimeter.h  Autonomy.cpp  Autonomy.h  CPP_Remote.cpp  CPP_Remote.h  Camera.cpp  Camera.h  Clock.cpp  Clock.h  Compas.cpp  Compas.h  Gps.cpp  Gps.h  Gui.cpp  Gui.h  Imu.cpp  Imu.h  Monitor.cpp  Monitor.h  Motor.cpp  Motor.h  Pressure.cpp  Pressure.h  Remote.cpp  Remote.h  Remote_Joystick.cpp  Remote_Joystick.h  Remote_rf.cpp  Remote_rf.h  Remote_tcp.cpp  Remote_tcp.h  Robot.cpp  Robot.h  Servo.cpp  Servo.h  Share.cpp  Share.h  Simulator.cpp  Simulator.h  (+6 more)
src/img_proc/: Builder.cpp  Builder.h  Io_file.cpp  Io_file.h  Mask.cpp  Mask.h  Tracking.cpp  Tracking.h  Utils.cpp  Utils.h
src/mains/: drone.cpp  map_builder.cpp  test.cpp
src/obsolete/: Monitor.h  Remote.cpp  Remote.h
src/stereotypes/: Actuator.cpp  Actuator.h  ComThread.cpp  ComThread.h  Exteroceptive.cpp  Exteroceptive.h  Proprioceptive.cpp  Proprioceptive.h  Sensor.cpp  Sensor.h
src/utils/: ComDraw.cpp  ComDraw.h  Joystick.cpp  Joystick.h  Modem.cpp  Modem.h  Serial.cpp  Serial.h  Tcp_server.cpp  Tcp_server.h
